--- a/header.html
+++ b/header.html
@@ -75,45 +75,22 @@
 </div>
 </div>
 </header>
-<!-- === Мобільне меню === -->
-<div class="mobile-menu">
-  <a href="/index.html">🏠 Головна</a>
-  <a href="/category.html?type=Фільм">🎬 Фільми</a>
-  <a href="/category.html?type=Серіал">📺 Серіали</a>
-  <a href="/category.html?type=Мультсеріал">🧸 Мультсеріали</a>
-  <a href="/collections.html">🎞 Збірки</a>
-  <a href="/profile.html">👑 Кабінет</a>
-</div>
-
-<button id="burger" class="burger-btn">☰</button>
-
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  // === Пошук ===
   const input = document.getElementById("search-input");
-  if (input) {
-    input.addEventListener("keypress", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        const query = input.value.trim();
-        if (query.length > 1) {
-          localStorage.setItem("searchQuery", query);
-          window.location.href = "/search.html";
-        }
-      }
-    });
-  }
+  if (!input) return;
 
-  // === Бургер-меню ===
-  const burger = document.getElementById("burger");
-  const menu = document.querySelector(".mobile-menu");
-  if (burger && menu) {
-    burger.addEventListener("click", () => {
-      menu.classList.toggle("open");
-      burger.classList.toggle("open");
-    });
-  }
+  input.addEventListener("keypress", function (e) {
+    if (e.key === "Enter") {
+      e.preventDefault();
+      const query = input.value.trim();
+      if (query.length > 1) {
+        // зберігаємо запит у localStorage
+        localStorage.setItem("searchQuery", query);
+        // переходимо на сторінку пошуку
+        window.location.href = "/search.html";
+      }
+    }
+  });
 });
 </script>
-
-
