--- a/bookmarks.html
+++ b/bookmarks.html
@@ -19,6 +19,9 @@
   </style>
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
+
   <div id="header-placeholder"></div>
   <script>
   // 🟢 Функція для активації пошуку після завантаження хедера
