--- a/category.html
+++ b/category.html
@@ -105,6 +105,9 @@
 </head>
 
 <body>
+  <div id="header-placeholder"></div>
+  <script src="header.js"></script>
+
   <!-- Хедер -->
   <div id="header-placeholder"></div>
   <script>
