--- a/collection.html
+++ b/collection.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
 
 <div id="header-placeholder"></div>
 <script>
