--- a/collections.html
+++ b/collections.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
 
 <!-- Підключення хедера -->
 <div id="header-placeholder"></div>
