--- a/film.html
+++ b/film.html
@@ -461,6 +461,9 @@
 </head>
 
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
+
 <!-- === HEADER PLACEHOLDER === -->
 <div id="header-placeholder"></div>
 
