--- a/multseries.html
+++ b/multseries.html
@@ -333,6 +333,8 @@
   </style>
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
 
 <!-- HEADER -->
 <div id="header-placeholder"></div>
