--- a/new.html
+++ b/new.html
@@ -87,6 +87,9 @@
 </head>
 
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
+
   <!-- === HEADER === -->
   <div id="header-placeholder"></div>
   <div id="header-placeholder"></div>
