--- a/profile.html
+++ b/profile.html
@@ -279,6 +279,8 @@ footer {
 
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
 
 <!-- Хедер -->
 <div id="header-placeholder"></div>
