--- a/series.html
+++ b/series.html
@@ -370,6 +370,8 @@
   </style>
 </head>
 <body>
+<div id="header-placeholder"></div>
+<script src="header.js"></script>
 
 <!-- HEADER -->
 <div id="header-placeholder"></div>
