--- a/series.html
+++ b/series.html
@@ -373,35 +373,10 @@
 <div id="header-placeholder"></div>
 <script src="header.js"></script>
 
-<!-- HEADER -->
+<!-- === HEADER PLACEHOLDER === -->
 <div id="header-placeholder"></div>
-<script>
-  // 🟢 Функція для активації пошуку після вставки хедера
-  function bindHeaderSearch() {
-    const input = document.getElementById("search-input");
-    if (!input) return;
+<script src="header.js"></script>
 
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        const query = input.value.trim();
-        if (query.length > 1) {
-          localStorage.setItem("searchQuery", query);
-          window.location.href = "/search.html";
-        }
-      }
-    });
-  }
-
-  // 🟢 Завантажуємо header.html і підключаємо пошук після вставки
-  fetch("header.html")
-    .then(r => r.text())
-    .then(h => {
-      document.getElementById("header-placeholder").innerHTML = h;
-      bindHeaderSearch(); // активуємо пошук після вставки
-    })
-    .catch(err => console.error("Помилка завантаження хедера:", err));
-</script>
 
 
 <div class="container">
