--- a/series.html
+++ b/series.html
@@ -693,7 +693,17 @@ const seasonColors = {
   2: "#ff6b2b",
   3: "#ff00ff",
   4: "#aaff00",
-  5: "#ffaa00"
+  5: "#ffaa00",
+  6: "#00fff2",
+  7: "#ff6b2b",
+  8: "#ff00ff",
+  9: "#aaff00",
+  10: "#ffaa00",
+  11: "#00fff2",
+  12: "#ff6b2b",
+  13: "#ff00ff",
+  14: "#aaff00",
+  15: "#ffaa00"
 };
 
   const activeColor = seasonColors[season] || "#00fff2";
