--- a/series.html
+++ b/series.html
@@ -706,7 +706,7 @@ const seasonColors = {
   15: "#ffaa00"
 };
 
-  const activeColor = seasonColors[season] || "#00fff2";
+  const activeColor = seasonColors[season] || "#c74279";
 
   episodes.forEach(ep => {
     const btn = document.createElement("button");
