--- a/series.html
+++ b/series.html
@@ -707,7 +707,7 @@ const seasonColors = {
 };
 
 
-  episodes.forEach(ep => {
+   episodes.forEach(ep => {
     const btn = document.createElement("button");
     btn.className = "ep-btn";
     btn.textContent = `Серія ${ep.episode || "?"}`;
@@ -719,24 +719,25 @@ const seasonColors = {
     list.appendChild(btn);
   });
 
-  // 🔹 Міняємо колір рамки і активного стану серій відповідно до сезону
+  // 🔹 Єдиний стиль для всіх сезонів (#c74279)
   const styleTag = document.getElementById("season-style") || document.createElement("style");
   styleTag.id = "season-style";
   styleTag.innerHTML = `
     .ep-list.season-${season} .ep-btn {
-      border-color: ${activeColor};
-      color: ${activeColor};
+      border-color: #c74279;
+      color: #c74279;
     }
     .ep-list.season-${season} .ep-btn.active {
-      background: ${activeColor};
-      color: #000;
-      box-shadow: 0 0 15px ${activeColor};
+      background: linear-gradient(145deg, #ff4b91, #c74279);
+      color: #fff;
+      box-shadow: 0 0 15px #c74279;
     }
   `;
   document.head.appendChild(styleTag);
 
   listContainer.appendChild(list);
 }
+
 // змінюємо колір активної кнопки сезону відповідно до серій
 function setSeasonButtonColor(btn, color) {
   btn.style.background = `linear-gradient(145deg, ${color}, #c74279)`;
