--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@ async function loadLatestFilms(page = 1) {
   const { data, error } = await supabase
     .from("films_site")
     .select("id, title, poster, type, genre, year, imdb, pro_access")
-    // 🔹 Фікс: нечутлива до регістру перевірка типу
-    .or("type.ilike.%фільм%,type.ilike.%мультфільм%,type.ilike.%мультсеріал%,type.ilike.%серіал%")
+    .in("type", ["Фільм", "Мультфільм", "Мультсеріал", "Серіал"])
     .order("id", { ascending: false })
     .limit(200);
 
@@ -475,8 +474,6 @@ function scrollToTopSmooth() {
 
 </body>
 </html>
-
-
 
 
 
