--- a/index.html
+++ b/index.html
@@ -140,14 +140,21 @@ async function loadLatestFilms(page = 1) {
     return;
   }
 
-  // 🔹 Унікальні за назвою
-  const map = new Map();
-  data.forEach(item => {
-    const key = item.title.trim();
-    if (!map.has(key)) map.set(key, item);
-  });
+// 🔹 Унікальні за назвою, але якщо є Фільм і Серіал з однаковою назвою — залишаємо Фільм
+const map = new Map();
+data.forEach(item => {
+  const key = item.title.trim();
+  if (!map.has(key)) {
+    map.set(key, item);
+  } else {
+    const existing = map.get(key);
+    if (existing.type !== "Фільм" && item.type === "Фільм") {
+      map.set(key, item); // пріоритет фільмам
+    }
+  }
+});
+const unique = Array.from(map.values());
 
-  const unique = Array.from(map.values());
 
   // 🔹 Пагінація
   const perPage = 24; // 6 рядів × 4 картки в ряд
@@ -474,6 +481,7 @@ function scrollToTopSmooth() {
 
 </body>
 </html>
+
 
 
 
