--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
     <div id="films-list" class="film-grid"></div>
     
 
-    <div class="pagination">
-      <button>«</button>
-      <button class="active">1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>»</button>
-    </div>
-  </div>
+    <div class="pagination"></div>
 
 </div><!-- /main-grid -->
 
@@ -481,6 +474,7 @@ function scrollToTopSmooth() {
 
 </body>
 </html>
+
 
 
 
